# aparse

./: .clangd  .gitignore  CMakeLists.txt  Makefile  aparse.c  aparse.h  aparse_api.c  aparse_api.h  aparse_arg.c  aparse_arg_new.c  aparse_error.c  aparse_internal.h  aparse_opt.c  aparse_opt_bool.c  aparse_opt_int.c  aparse_parse.c  aparse_state.c  build.json  build.py  test.c
.cache/clangd/index/: aparse_api.c.7B336BED13927A25.idx  aparse_api.h.5055C257E6CAA40A.idx  aparse_arg.c.77C3DE9AD936C78B.idx  aparse_error.c.251F968C5B1C54AF.idx  aparse_internal.h.8A10261CE02CE842.idx  aparse_parse.c.EC3B0A4B4EDD5FFD.idx  aparse_state.c.5C6EDA0C5FA251B2.idx  api.h.582B93CD3CB4CAAB.idx  config.h.BF5D913B8DA1153E.idx  impl.c.3D1F1485E182B985.idx  internal.h.83F8931EF5AE7F31.idx  mptest_build.h.086AE775A8CD9507.idx  test_config.h.27AA1CA996479F51.idx  test_harness.h.AA35D43A4AFD1D18.idx  test_main.c.B97F5D25D4800621.idx
_cpack/: aparse.h  api.h  config.h  impl.c  internal.h
attic/: aparse_api.c  aparse_api.h  aparse_internal.h  aparse_state.c  test.py
attic/pack/: aparse__bits_api.h  aparse_common.h  aparse_common_api.h
attic/tests/: mptest_build.h  test_config.h  test_harness.h  test_main.c
pack/: aparse__bits.h  aparse_config.h
test/: CMakeLists.txt  mptest.h  test.c
tests/: test_main.c
