cmake_minimum_required(VERSION 3.0.0)
project(aparse VERSION 0.1.0)
set(SOURCES aparse_api.c aparse_arg.c aparse_error.c aparse_state.c aparse_parse.c _cpack/impl.c)
set(TEST_SOURCES tests/test_main.c)
set(ANY_OPTS "-Wall" "-Werror" "-Wextra" "-Wshadow" "-Wconversion" "-Wstrict-prototypes" "-Wuninitialized" "-Wpedantic" "--std=c89")
set(DEBUG_OPTS "-g" "-O0")
set(RELEASE_OPTS "-O3")
add_executable(aparse_tests ${SOURCES} ${TEST_SOURCES})
target_compile_definitions(aparse_tests PUBLIC MN__SPLIT_BUILD MN_DEBUG)
target_compile_options(aparse_tests PUBLIC "${ANY_OPTS}")
target_compile_options(aparse_tests PUBLIC "$<$<CONFIG:RELEASE>:${RELEASE_OPTS}>")
target_compile_options(aparse_tests PUBLIC "$<$<CONFIG:DEBUG>:${DEBUG_OPTS}>")
add_executable(aparse_fuzz ${SOURCES} ${FUZZ_SOURCES})
target_compile_definitions(aparse_fuzz PUBLIC MN__SPLIT_BUILD MN_DEBUG)
target_compile_options(aparse_fuzz PUBLIC "${ANY_OPTS}" "${FUZZ_OPTS}")
target_compile_options(aparse_fuzz PUBLIC "$<$<CONFIG:RELEASE>:${RELEASE_OPTS}>")
target_compile_options(aparse_fuzz PUBLIC "$<$<CONFIG:DEBUG>:${DEBUG_OPTS}>")
target_link_options(aparse_fuzz PUBLIC -fsanitize=fuzzer,address)